test/should-fail/vsgc4173c.visage
/**
 * Regress test for VSGC-4173.
 *
 *  Improved support for forward references
 *
 * @compilearg -XDfwdRefOpt=lambda
 * @compile vsgc4173sub.visage
 * @test/warning
 */
